--- a/songsP.ipynb
+++ b/songsP.ipynb
@@ -1,6 +1,14 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Для начала нужно добавить необходимые библиотеки:\n",
+        "numpy, pandas, matplotlib, sklern, tenserflor, copy\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 114,
       "metadata": {
@@ -38,6 +46,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Считаем данные"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 115,
       "metadata": {
@@ -46,6 +61,13 @@
       "outputs": [],
       "source": [
         "data = pd.read_csv('dataset.csv')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Выведем данные"
       ]
     },
     {
@@ -466,6 +488,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Очистка данных от нулевых строк и приведение датасета к формату подходящим для обучения"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 117,
       "metadata": {
@@ -512,6 +541,13 @@
         "data = data.drop(data.columns[0], axis=1)\n",
         "data\n",
         "data.isnull().sum()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Удаление всех пустых строк из столбцов artists, album_name, track_name"
       ]
     },
     {
@@ -594,6 +630,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Замена типа столбца с bool, с которым не может работать ML на int"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 120,
       "metadata": {
@@ -644,6 +687,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Переведём миллисекунды в минуты"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 121,
       "metadata": {},
@@ -656,6 +706,13 @@
         "\n",
         "\n",
         "data = data.rename(columns={'duration_ms' : 'duration_min'})"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Создаём график зависимости популярности песен от их длинны"
       ]
     },
     {
@@ -697,6 +754,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Выведем график, который покажет зависимости популярности от громкости и энергичности музыки. Он показывает, что большая часть популярных песен имеет длительность менее 8 минут, а самые популярные песни сосредоточенны в промежутке от 2 до 4 минут."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 123,
       "metadata": {},
@@ -733,6 +797,20 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Данные графики показывают, что существует пряма корриляция между популярностью трека и его громкостью и энергичностью"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Приведение всех столбцов таблицу к численному виду"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 124,
       "metadata": {
@@ -753,6 +831,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Выбор признаков для обучения модели"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 125,
       "metadata": {
@@ -765,6 +850,13 @@
         "x = clean.drop(columns=['popularity'])\n",
         "y = clean['duration_min']\n",
         "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2, random_state=42)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Обучение модели на выбранных признаках"
       ]
     },
     {
